<resources>
    <string name="app_name">Noel\'s Cookbook</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="cooking_time_minutes">Cooking Time (minutes)</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="ingredients">Ingredients</string>
    <string name="cooking_process">Cooking Process</string>
    <string name="submit_recipe">Submit Recipe</string>
    <string name="enter_cooking_process">Enter cooking process</string>
    <string name="enter_cooking_time">Enter cooking time</string>
    <string name="enter_cuisine_type">Enter cuisine type</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="enter_number_of_servings">Enter number of servings</string>
    <string name="add_an_ingredient">Add an Ingredient</string>
    <string name="add_a_cooking_process">Add a Cooking Process</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="enter_ingredient_name">Enter ingredient name</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="please_add_one_cooking_step_per_entry">Please add one cooking step per entry.</string>
    <string name="cooking_step">Cooking step</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="servings_text">%1$d servings</string>
    <string name="cooking_time_text">%1$d minutes</string>
    <string name="cuisine_type_text">%1$s cuisine</string>
    <string name="update_button_text">Update Recipe</string>
    <string name="add_a_recipe">Add a Recipe</string>
    <string name="no_recipe_added_please_add_a_recipe">No recipe added. Please add a recipe.</string>

</resources>