<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Ingredient Name -->
    <TextView
        android:id="@+id/textViewIngredientNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextIngredientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ingredient_name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <!-- Quantity TextView and EditText -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_quantity"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

        <!-- Unit of Measurement TextView and Spinner -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUnitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinnerUnit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/all_measurements"
      />
        </LinearLayout>
    </LinearLayout>




    <!-- Confirm Button -->
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"/>

</LinearLayout>
