<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Ingredient Name -->
    <TextView
        android:id="@+id/textViewCookingStepLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cooking_step"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextCookingStep"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:background="@drawable/custom_edittext"
        android:layout_height="wrap_content"
        android:hint="@string/please_add_one_cooking_step_per_entry"
        android:minLines="5"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:minHeight="48dp"
        tools:ignore="RtlSymmetry,TextContrastCheck"
        android:importantForAutofill="no" />






    <!-- Confirm Button -->
    <Button
        android:id="@+id/btnConfirmCookingStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"/>

</LinearLayout>
