<!-- item_ingredient.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewIngredientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"
        android:layout_toStartOf="@+id/ingredientMenuImageButton"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:id="@+id/quantityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewIngredientName"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewIngredientQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/textViewIngredientUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/unit" />

    </LinearLayout>

    <!-- ImageButton positioned to the right of the quantity layout -->
    <ImageButton
        android:id="@+id/ingredientMenuImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kebab_menu"
        android:backgroundTint="@color/transparentColor"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:importantForAccessibility="no" />

</RelativeLayout>
