<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Recipe Details Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Recipe Name -->
                    <TextView
                        android:id="@+id/textviewRecipeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:text="@string/recipe_name"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/colorAccent"
                        tools:ignore="TextContrastCheck" />

                    <!-- Number of Servings -->
                    <TextView
                        android:id="@+id/textviewNumberOfServings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/servings"
                        android:drawablePadding="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/number_of_servings" />

                    <!-- Cooking Time -->
                    <TextView
                        android:id="@+id/textviewCookingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        app:drawableStartCompat="@drawable/timer"
                        android:drawablePadding="8dp"
                         android:text="@string/cooking_time_minutes" />

                    <!-- Cuisine Type -->
                    <TextView
                        android:id="@+id/textviewCuisineType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/cuisine"
                        android:drawablePadding="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/cuisine_type"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!-- Ingredients Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Ingredients -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/ingredients" />

                    <!-- RecyclerView for Ingredients -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:importantForAutofill="no"
                        android:padding="8dp"
                        android:scrollbars="vertical" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Cooking Process Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Cooking Process -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/cooking_process" />

                    <!-- RecyclerView for Cooking Process -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCookingProcess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:padding="8dp"
                        android:scrollbars="vertical" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
